IMTS-unstable
=============

(MudBot:)
- Added limited shared/synchronized memory zone support.
- Added support for socks5 and http proxies.
(Imperian:)
- Added the 'back' body part.
(IMapper:)
- Fixed the 'go' command: resets dash/sprint status, and lets unknown 'go'
  commands go to Imperian. Builders rejoyce.
(IOffense:)
- Stripped the iScript out of here, into its own module.
- Moved the 'grep' command to the other mod, to clear the pcre requirement.
(IScript:)
- Complete rewrite of the iScript parser.



IMTS-6
=============

(MudBot:)
- Completely rewritten the way lines/prompts are parsed and sent to the
  modules for processing.
- Also rewritten the way telnet subnegotiation is processed. MudBot is now
  almost fully compatible with Nexus.
- MXP made a tiny bit more compatible for MushClient.
- MCCP starting on the same packet that stopped it, fixed. Editing journals
  or scrolls should no longer be buggy.
- Crash logs have more info on them.
(Imperian:)
- Rat/spider worth parsing is working again, also added caiman, serpents
  and locusts.
- Impatience should stop trying to focus.
- Defences can be marked to be brought up only once. Use 'once' instead of
  'on' in the options file.
- Option 'perma_moss' added.
(IMapper:)
- Autolinking added, and enabled by default. Added an option to disable it.
- Floating MXP map window added. Warning, Zmud acts buggy about it.
- Duplicate room detection while mapping, added.
- Merging of two identic rooms (duplicate) into one, added.
- Most Pathfinder bugs are now gone. This will mostly affect the wings room
  and Caanae sewer entrances.
- Added an option to disable pathfinding through sewers.
- Added room tags, and replaced the landmarks system with it.
- The 'landmarks' command can be used to list all rooms with a tag.
- 'map path' works with tags instead of vnums too. If more rooms have a
  given tag, 'go' will go to the nearest.
- Now possible to show two or more areas in a single 'map'.